<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_shape_login_item_bg"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon_login_name" />
            </RelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="45dp"
                android:background="#E6E6E6" />

            <EditText
                android:id="@+id/app_et_login_user_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/base_transparent"
                android:gravity="center_vertical"
                android:hint="@string/app_input_account"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#C8C8C8"
                android:textSize="@dimen/font18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_shape_login_item_bg"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon_login_pwd" />
            </RelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="45dp"
                android:background="#E6E6E6" />

            <EditText
                android:id="@+id/app_et_login_user_pwd"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/base_transparent"
                android:gravity="center_vertical"
                android:hint="@string/app_input_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#C8C8C8"
                android:textSize="@dimen/font18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_shape_login_item_bg"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon_login_captcha" />
            </RelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="45dp"
                android:background="#E6E6E6" />

            <EditText
                android:id="@+id/app_et_login_code"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/base_transparent"
                android:gravity="center_vertical"
                android:hint="@string/app_input_vcode"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#C8C8C8"
                android:textSize="@dimen/font18" />

            <View
                android:layout_width="1px"
                android:layout_height="45dp"
                android:background="#E6E6E6" />

            <ImageView
                android:id="@+id/app_iv_code"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:scaleType="fitXY" />
        </LinearLayout>

        <Button
            android:id="@+id/app_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="#f6f6f6"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/app_login"
            android:textColor="@color/base_black"
            android:textSize="@dimen/font18" />

    </LinearLayout>

</RelativeLayout>